<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="@dimen/image_widht"
        android:layout_height="@dimen/image_height"
        android:layout_marginStart="@dimen/margin_2"
        android:layout_marginTop="@dimen/margin_2"
        android:layout_marginEnd="@dimen/margin_1"
        android:background="@drawable/tulip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="@dimen/margin_3"
            android:layout_height="@dimen/margin_3"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginBottom="@dimen/margin_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/star" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_1"
            android:layout_marginBottom="@dimen/margin_1"
            android:text="@string/navigation_lbl2"
            android:textColor="@color/white"
            android:textSize="@dimen/text_1"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView6"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_1"
            android:layout_marginBottom="@dimen/margin_1"
            android:text="@string/navigation_lbl3"
            android:textColor="@color/white"
            android:textSize="@dimen/text_1"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/margin_4"
            android:layout_marginStart="@dimen/margin_1"
            android:layout_marginTop="@dimen/margin_1"
            android:layout_marginEnd="@dimen/margin_1"
            android:background="@color/purple"
            android:text="@string/navigatin_lbl1"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2"
        android:layout_marginTop="@dimen/margin_1"
        android:layout_marginEnd="@dimen/margin_2"
        android:text="@string/navigation_lbl4"
        android:textColor="@color/black"
        android:textSize="@dimen/text_1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_2"
        android:layout_marginTop="@dimen/margin_1"
        android:layout_marginEnd="@dimen/margin_2"
        android:layout_marginBottom="@dimen/margin_1"
        android:text="@string/navigation_lbl5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>