<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_1"
            android:layout_marginTop="@dimen/margin_2"
            android:text="@string/filter_lbl1"
            android:textColor="@color/purple"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_1"
            android:layout_marginEnd="@dimen/margin_1"
            android:text="@string/filter_lbl2"
            android:textColor="@color/black"
            android:textSize="@dimen/text_3"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView22"
            app:layout_constraintEnd_toStartOf="@+id/textView24"
            app:layout_constraintStart_toEndOf="@+id/textView22"
            app:layout_constraintTop_toTopOf="@+id/textView22"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_1"
            android:text="@string/filter_lbl3"
            android:textColor="@color/purple"
            app:layout_constraintBottom_toBottomOf="@+id/textView23"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView23"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_1"
            android:layout_marginTop="@dimen/margin_3"
            android:layout_marginEnd="@dimen/margin_1"
            android:text="@string/filter_lbl4"
            android:textColor="@color/black"
            android:textSize="@dimen/text_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />

        <Spinner
            android:id="@+id/filter_spinner"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_5"
            android:layout_marginStart="@dimen/margin_1"
            android:layout_marginEnd="@dimen/margin_1"
            android:entries="@array/filter_spinner"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout3" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_5"
            android:layout_marginStart="@dimen/margin_1"
            android:layout_marginTop="@dimen/margin_2"
            android:layout_marginEnd="@dimen/margin_1"
            android:background="@drawable/corner_shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView25">

        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_1"
            android:layout_marginTop="@dimen/margin_3"
            android:layout_marginEnd="@dimen/margin_1"
            android:text="@string/filter_lbl6"
            android:textColor="@color/black"
            android:textSize="@dimen/text_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView26">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="6"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="@dimen/margin_zero"
                    android:layout_height="@dimen/height"
                    android:layout_margin="@dimen/margin"
                    android:layout_weight="1"
                    android:background="@drawable/textview_shape">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="@dimen/image_margin"
                        android:text="@string/filter_lbl7" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/margin_zero"
                    android:layout_height="@dimen/height"
                    android:layout_margin="@dimen/margin"
                    android:layout_weight="1"
                    android:background="@drawable/textview_shape">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/margin_1"
                        android:paddingTop="@dimen/image_margin"
                        android:paddingRight="@dimen/margin"
                        android:text="@string/filter_lbl8" />

                    <ImageView
                        android:layout_width="@dimen/margin_4"
                        android:layout_height="@dimen/margin_4"
                        android:layout_marginLeft="@dimen/margin_1"
                        android:paddingTop="@dimen/margin_1"
                        android:paddingRight="@dimen/margin_1"
                        android:src="@drawable/greystar" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/margin_zero"
                    android:layout_height="@dimen/height"
                    android:layout_margin="@dimen/margin"
                    android:layout_weight="1"
                    android:background="@drawable/textview_shape">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/margin_1"
                        android:paddingTop="@dimen/image_margin"
                        android:paddingRight="@dimen/margin"
                        android:text="@string/filter_lbl9" />

                    <ImageView
                        android:layout_width="@dimen/margin_4"
                        android:layout_height="@dimen/margin_4"
                        android:layout_marginLeft="@dimen/image_margin"
                        android:paddingTop="@dimen/margin_1"
                        android:paddingRight="@dimen/margin_1"
                        android:src="@drawable/greystar" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/margin_zero"
                    android:layout_height="@dimen/height"
                    android:layout_margin="@dimen/margin"
                    android:layout_weight="1"
                    android:background="@drawable/textview_shape">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/margin_1"
                        android:paddingTop="@dimen/image_margin"
                        android:paddingRight="@dimen/margin"
                        android:text="@string/filter_lbl10" />

                    <ImageView
                        android:layout_width="@dimen/margin_4"
                        android:layout_height="@dimen/margin_4"
                        android:layout_marginLeft="@dimen/image_margin"
                        android:paddingTop="@dimen/margin_1"
                        android:paddingRight="@dimen/margin_1"
                        android:src="@drawable/greystar" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/margin_zero"
                    android:layout_height="@dimen/height"
                    android:layout_margin="@dimen/margin"
                    android:layout_weight="1"
                    android:background="@drawable/textview_shape">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/margin_1"
                        android:paddingTop="@dimen/image_margin"
                        android:paddingRight="@dimen/margin"
                        android:text="@string/filter_lbl11" />

                    <ImageView
                        android:layout_width="@dimen/margin_4"
                        android:layout_height="@dimen/margin_4"
                        android:layout_marginLeft="@dimen/image_margin"
                        android:paddingTop="@dimen/margin"
                        android:paddingRight="@dimen/margin"
                        android:src="@drawable/greystar" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/margin_zero"
                    android:layout_height="@dimen/height"
                    android:layout_margin="@dimen/margin"
                    android:layout_weight="1"
                    android:background="@drawable/textview_shape">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/margin_1"
                        android:paddingTop="@dimen/image_margin"
                        android:paddingRight="@dimen/margin"
                        android:text="@string/filter_lbl12" />

                    <ImageView
                        android:layout_width="@dimen/margin_4"
                        android:layout_height="@dimen/margin_4"
                        android:layout_marginLeft="@dimen/image_margin"
                        android:paddingTop="@dimen/margin_1"
                        android:paddingRight="@dimen/margin_1"
                        android:src="@drawable/greystar"/>

                </LinearLayout>

            </LinearLayout>
        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_1"
            android:layout_marginTop="@dimen/margin_3"
            android:layout_marginEnd="@dimen/margin_1"
            android:text="@string/filter_lbl13"
            android:textColor="@color/black"
            android:textSize="@dimen/text_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout10" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_1"
            android:layout_marginTop="@dimen/margin_1"
            android:layout_marginEnd="@dimen/margin_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView27"
            app:srcCompat="@drawable/barchart" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_1"
            android:layout_marginTop="@dimen/margin_2"
            android:text="@string/filter_lbl14"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView8" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_1"
            android:layout_marginTop="@dimen/margin_2"
            android:layout_marginEnd="@dimen/margin_1"
            android:text="@string/filter_lbl15"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/textView28"
            app:layout_constraintTop_toBottomOf="@+id/imageView8" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout9"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height"
            android:layout_marginStart="@dimen/margin_1"
            android:layout_marginTop="@dimen/margin_2"
            android:layout_marginEnd="@dimen/margin_1"
            android:layout_marginBottom="@dimen/margin_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView28"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height"
                android:layout_marginTop="@dimen/margin_1"
                android:layout_marginBottom="@dimen/margin_1"
                android:background="@color/white"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <Button
                    android:id="@+id/button3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_2"
                    android:layout_weight="1.6"
                    android:background="@color/purple"
                    android:text="@string/filter_lbl16"
                    android:textColor="@color/white" />

                <ImageButton
                    android:layout_width="@dimen/margin_zero"
                    android:layout_height="@dimen/height"
                    android:layout_weight="0.4"
                    android:background="@color/purple"
                    android:src="@drawable/ic_map_black_24dp" />

            </LinearLayout>
        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>